--- a/css/Style.css
+++ b/css/Style.css
@@ -6,6 +6,7 @@ html, body{
     margin: 0%;
     box-sizing: border-box;
     overflow-x: hidden;
+    background-color: rgb(0, 0, 0);
 }
 
 :root{
@@ -57,7 +58,7 @@ h2{
 
 h3{
     font-family: var(--Abel);
-    font-size: 1.3rem;
+    font-size: 2.5rem;
 }
 
 button.btn{
@@ -156,31 +157,35 @@ p{
     padding: 1.4rem 0
 }
 
-.nav .social i{
+.nav .social a img{
     padding: 0 .2rem;
+    height:2rem;
+    width:2rem;
+    margin: 1.4rem;
 }
 
 .nav .social i:hover{
-    color: #a1c4cf;
+    color: #b9b9b9;
 }
 
 /* --------------- Site title ---------------- */
 main .site-title{
     background: rgb(0, 0, 0);
     background-size: cover;
-    height: 20vh;
-    display: flex;
-    justify-content: center;
+    height: 100%;
+    display:grid;
+    justify-items: center;
 }
 
 main .site-title .site-background{
-    padding-top: 3rem;
+    padding: 3rem;
     text-align: center;
     color: var(--white);
+    margin: 0px 70px;
 }
 
 main .site-title h1, h3{
-    margin: .3rem;
+    margin: 2rem;
 }
 
 main .site-title .btn{
@@ -192,6 +197,37 @@ main .site-title .btn:hover{
     background: transparent;
     border: 1px solid var(--white);
     color: var(--white);
+}
+main .site-title .wrapper{
+    position: relative;
+    max-width: 50rem;
+    width: 100%;
+    background: #fff;
+    border-radius: 6px;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+}
+main .site-title .wrapper .p1{
+    padding: 6rem;
+}
+main .site-title .offer{
+    padding: 3rem;
+    text-align: center;
+    color: var(--white);
+    margin: 0px 30px
+}
+main .site-title .companies{
+    padding: 3rem;
+    text-align: center;
+    color: var(--white);
+    margin: 0px 50px
+}
+main .site-title .meeting{
+    padding: 3rem;
+    text-align: center;
+    color: var(--white);
+    margin: 0px 50px
 }
 main .middle{
     background-color: #000000;
@@ -210,6 +246,12 @@ main .middle .calendly-inline-widget{
     justify-content: center;
     overflow: hidden;
 }
+main .meeting {
+    justify-items: center;
+    text-align: center;
+    color: var(--white);
+    padding: 3rem;
+}
 
 /* ----------------- Footer --------------------- */
 
@@ -221,7 +263,7 @@ footer.footer{
 
 footer.footer .container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    align-content: center;
 }
 
 footer.footer .container > div{
@@ -238,7 +280,6 @@ footer.footer .newsletter .form-element{
     background: black;
     display: inline-block;
 }
-
 footer.footer .newsletter .form-element input{
     padding: .5rem .7rem;
     border: none;
@@ -391,3 +432,82 @@ footer.footer .move-up span:hover{
 }
 
 /*        x      Viewport less then or equal to 520px       x     */
+
+main .blog{
+    background-color:#000000;
+    height: 100%;
+    width: 100%;
+    margin: 0 0 3rem;
+}
+
+main .blog .blog-post{
+}
+
+main .blog-post .blog-content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    border-radius: 100%;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+main .blog-post .circle{
+    width: 25rem;
+    height: 25rem;
+    background: rgb(255, 255, 255);
+    border-radius: 50%;
+    margin: auto;
+    color: white;
+}
+main .circle .client{
+    border-radius: 50%;
+}
+main .blog-post .circle p{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: var(--Lexend);
+    color:#000000;
+    font-size: 30px;
+    margin: 1rem;
+}
+
+main .blog-content .blog-title{
+    padding: 2rem 0;
+}
+main .blog-content .blog-title h3{
+    color:rgb(0, 0, 0);
+    padding: 1rem 0;
+}
+
+main .blog-content .btn-blog{
+    padding: .7rem 2rem;
+    background: var(--white);
+    margin: .5rem;
+}
+
+main .blog-content span{
+    display: block;
+}
+section .container .owl-nav{
+    position: absolute;
+    top: 0%;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.owl-nav .owl-prev .owl-nav-prev,
+.owl-nav .owl-next .owl-nav-next{
+    color:var(--white);
+    background: transparent;
+    font-size: 2rem;
+}
+
+.owl-theme .owl-nav [class*='owl-']:hover{
+    background: transparent;
+    color: var(--text-gray);
+}
+
+.owl-theme .owl-nav [class*='owl-']{
+    outline: none;
+}
