--- a/css/Style.css
+++ b/css/Style.css
@@ -80,6 +80,7 @@ span{
 
 .text-gray{
     color: var(--text-gray);
+    text-align: center;
 }
 
 p{
@@ -439,18 +440,6 @@ main .blog{
     width: 100%;
     margin: 0 0 3rem;
 }
-
-main .blog .blog-post{
-}
-
-main .blog-post .blog-content{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 80%;
-    border-radius: 100%;
-    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
-}
 main .blog-post .circle{
     width: 25rem;
     height: 25rem;
@@ -466,8 +455,8 @@ main .blog-post .circle p{
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-family: var(--Lexend);
-    color:#000000;
+    font-family: var(--Anton);
+    color:#2c2c2c;
     font-size: 30px;
     margin: 1rem;
 }
