--- a/css/Style.css
+++ b/css/Style.css
@@ -241,7 +241,7 @@ main .middle{
 }
 main .middle .calendly-inline-widget{
     position: relative;
-    height:930px;
+    height:850px;
     width:40%;
     border-radius: 15px;
     justify-content: center;
@@ -354,9 +354,6 @@ footer.footer .move-up span:hover{
     .nav .social{
         display:none;
     }
-    main .middle{
-        height: 110vh;
-    }
     main .middle .calendly-inline-widget{
         height:99%;
         width:90%;
@@ -381,6 +378,9 @@ footer.footer .move-up span:hover{
     main .site-content{
         grid-template-columns: 100%;
     }
+    main .site-title .site-background{
+        margin: 0rem -3rem 0rem;
+    }
 
     footer.footer .container{
         grid-template-columns: repeat(1, 1fr);
@@ -392,7 +392,6 @@ footer.footer .move-up span:hover{
         height:99%;
         width:90%;
     }
-
 }
 
 
@@ -447,6 +446,8 @@ main .blog-post .circle{
     border-radius: 50%;
     margin: auto;
     color: white;
+    border:5px solid rgb(111, 111, 111);    
+
 }
 main .circle .client{
     border-radius: 50%;
