--- a/css/Style.css
+++ b/css/Style.css
@@ -176,6 +176,7 @@ main .site-title{
     height: 100%;
     display:grid;
     justify-items: center;
+    justify-content: center;
 }
 
 main .site-title .site-background{
@@ -241,11 +242,12 @@ main .middle{
 }
 main .middle .calendly-inline-widget{
     position: relative;
-    height:850px;
+    height:890px;
     width:40%;
     border-radius: 15px;
     justify-content: center;
     overflow: hidden;
+    overflow-y: hidden;
 }
 main .meeting {
     justify-items: center;
@@ -253,6 +255,78 @@ main .meeting {
     color: var(--white);
     padding: 3rem;
 }
+
+
+/* -----------------Slider ---------------------- */
+
+main .blog{
+    background-color:#000000;
+    height: 100%;
+    width: 100%;
+    margin: 0 0 3rem;
+}
+main .blog-post .circle{
+    width: 25rem;
+    height: 25rem;
+    background: rgb(255, 255, 255);
+    border-radius: 50%;
+    margin: auto;
+    color: white;
+    border:5px solid rgb(111, 111, 111);    
+}
+main .circle .client{
+    border-radius: 50%;
+}
+main .blog-post .circle p{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: var(--Anton);
+    color:#2c2c2c;
+    font-size: 30px;
+    margin: 1rem;
+}
+
+main .blog-content .blog-title{
+    padding: 2rem 0;
+}
+main .blog-content .blog-title h3{
+    color:rgb(0, 0, 0);
+    padding: 1rem 0;
+}
+
+main .blog-content .btn-blog{
+    padding: .7rem 2rem;
+    background: var(--white);
+    margin: .5rem;
+}
+
+main .blog-content span{
+    display: block;
+}
+section .container .owl-nav{
+    position: absolute;
+    top: 0%;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.owl-nav .owl-prev .owl-nav-prev,
+.owl-nav .owl-next .owl-nav-next{
+    color:var(--white);
+    background: transparent;
+    font-size: 2rem;
+}
+
+.owl-theme .owl-nav [class*='owl-']:hover{
+    background: transparent;
+    color: var(--text-gray);
+}
+
+.owl-theme .owl-nav [class*='owl-']{
+    outline: none;
+}
+
 
 /* ----------------- Footer --------------------- */
 
@@ -335,6 +409,14 @@ footer.footer .move-up span:hover{
 
 /* ---------x------- Footer ----------x---------- */
 
+/*              Viewport less then or equal to 1400px            */
+
+@media only screen and (max-width:1400px) {
+    main .blog-post .circle{
+        width: 17rem;
+        height: 17rem;   
+    }
+}
 /*              Viewport less then or equal to 1130px            */
 
 @media only screen and (max-width: 1130px){
@@ -343,7 +425,9 @@ footer.footer .move-up span:hover{
         bottom: 1.2rem !important;
         border-radius: 0% !important;
     }
-
+    .nav .nav-menu {
+        justify-content: center;
+    }
     .site-content .sidebar .popular-post .post-info{
         display: none !important;
     }
@@ -355,10 +439,9 @@ footer.footer .move-up span:hover{
         display:none;
     }
     main .middle .calendly-inline-widget{
-        height:99%;
-        width:90%;
+        height:85%;
+        width:67%;
     }
-
 }
 
 /*      x       Viewport less then or equal to 1130px    x     */
@@ -367,10 +450,6 @@ footer.footer .move-up span:hover{
 /*              Viewport less then or equal to 750px            */
 
 @media only screen and (max-width: 750px){
-    .nav .nav-menu, .nav .nav-items{
-        flex-direction: column;
-    }
-
     .nav .toggle-collapse{
         display: initial;
     }
@@ -389,22 +468,67 @@ footer.footer .move-up span:hover{
         display:none;
     }
     main .middle .calendly-inline-widget{
-        height:99%;
-        width:90%;
+        height:86%;
+        width:87%;
+    }
+    main .site-title .wrapper .p1 {
+        padding: 6rem;
+    }
+    main .site-title .wrapper {
+        max-width: 36rem;
+    }
+    main .site-title .offer,.companies,.site-background {
+        padding: 0;
+    }
+    main .blog-post .circle{
+        width: 17rem;
+        height: 17rem;   
     }
 }
 
 
 /*        x      Viewport less then or equal to 750px       x     */
 
+/*              Viewport less then or equal to 650px            */
+
+@media only screen and (max-width: 650px){
+    main .site-title .wrapper {
+        max-width: 30rem;
+    }
+    main .site-title .wrapper .p1 {
+        padding: 5rem;
+    }
+    main .blog-post .circle{
+        width: 15rem;
+        height: 15rem;   
+    }
+}
+/*              Viewport less then or equal to 600px            */
+
+@media only screen and (max-width: 600px){
+    main .site-title .wrapper {
+        max-width: 25rem;
+    }
+    main .site-title .wrapper .p1 {
+        padding: 3rem;
+    }
+    main .site-title .site-background {
+        padding: 0;
+    }
+    main .site-title .offer {
+        padding: 0;
+    }
+    main .site-title .companies {
+        padding: 0;
+    }
+    main .meeting {
+        padding: 0;
+    }
+}
 
 /*              Viewport less then or equal to 520px            */
 
 @media only screen and (max-width: 520px){
-    main .blog{
-        height: 125vh;
-    }
-
     .site-content .post-content > .post-image .post-info{
         display: none;
     }
@@ -428,76 +552,13 @@ footer.footer .move-up span:hover{
         height:90%;
         width:90%;
     }
+    main .site-title .wrapper {
+        max-width: 22rem;
+    }
+    main .site-title .wrapper .p1 {
+        padding: 2rem;
+    }
 
 }
 
 /*        x      Viewport less then or equal to 520px       x     */
-
-main .blog{
-    background-color:#000000;
-    height: 100%;
-    width: 100%;
-    margin: 0 0 3rem;
-}
-main .blog-post .circle{
-    width: 25rem;
-    height: 25rem;
-    background: rgb(255, 255, 255);
-    border-radius: 50%;
-    margin: auto;
-    color: white;
-    border:5px solid rgb(111, 111, 111);    
-
-}
-main .circle .client{
-    border-radius: 50%;
-}
-main .blog-post .circle p{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-family: var(--Anton);
-    color:#2c2c2c;
-    font-size: 30px;
-    margin: 1rem;
-}
-
-main .blog-content .blog-title{
-    padding: 2rem 0;
-}
-main .blog-content .blog-title h3{
-    color:rgb(0, 0, 0);
-    padding: 1rem 0;
-}
-
-main .blog-content .btn-blog{
-    padding: .7rem 2rem;
-    background: var(--white);
-    margin: .5rem;
-}
-
-main .blog-content span{
-    display: block;
-}
-section .container .owl-nav{
-    position: absolute;
-    top: 0%;
-    margin: 0 auto;
-    width: 100%;
-}
-
-.owl-nav .owl-prev .owl-nav-prev,
-.owl-nav .owl-next .owl-nav-next{
-    color:var(--white);
-    background: transparent;
-    font-size: 2rem;
-}
-
-.owl-theme .owl-nav [class*='owl-']:hover{
-    background: transparent;
-    color: var(--text-gray);
-}
-
-.owl-theme .owl-nav [class*='owl-']{
-    outline: none;
-}
