--- a/css/Style.css
+++ b/css/Style.css
@@ -234,11 +234,10 @@ main .site-title .meeting{
 main .middle{
     background-color: #000000;
     background-size: cover;
-    height: 115vh;
     display: flex;
     justify-content: center;
     overflow: hidden;
-
+    padding-bottom: 10vh;
 }
 main .middle .calendly-inline-widget{
     position: relative;
@@ -416,6 +415,10 @@ footer.footer .move-up span:hover{
         width: 17rem;
         height: 17rem;   
     }
+    main .middle .calendly-inline-widget{
+        height:100vh;
+        width:90%;
+    }
 }
 /*              Viewport less then or equal to 1130px            */
 
@@ -439,8 +442,8 @@ footer.footer .move-up span:hover{
         display:none;
     }
     main .middle .calendly-inline-widget{
-        height:85%;
-        width:67%;
+        height:100vh;
+        width:90%;
     }
 }
 
@@ -467,10 +470,6 @@ footer.footer .move-up span:hover{
     .nav .social{
         display:none;
     }
-    main .middle .calendly-inline-widget{
-        height:86%;
-        width:87%;
-    }
     main .site-title .wrapper .p1 {
         padding: 6rem;
     }
@@ -483,6 +482,10 @@ footer.footer .move-up span:hover{
     main .blog-post .circle{
         width: 17rem;
         height: 17rem;   
+    }
+    main .middle .calendly-inline-widget{
+        height:100vh;
+        width:90%;
     }
 }
 
@@ -501,6 +504,10 @@ footer.footer .move-up span:hover{
     main .blog-post .circle{
         width: 15rem;
         height: 15rem;   
+    }
+    main .middle .calendly-inline-widget{
+        height:100vh;
+        width:90%;
     }
 }
 /*              Viewport less then or equal to 600px            */
@@ -523,6 +530,10 @@ footer.footer .move-up span:hover{
     }
     main .meeting {
         padding: 0;
+    }
+    main .middle .calendly-inline-widget{
+        height:100vh;
+        width:90%;
     }
 }
 
@@ -549,7 +560,7 @@ footer.footer .move-up span:hover{
         display:none;
     }
     main .middle .calendly-inline-widget{
-        height:90%;
+        height:100vh;
         width:90%;
     }
     main .site-title .wrapper {
